<resources>
    <string name="app_name">Bascula</string>
    <string name="action_settings">Settings</string>
    <string name="preferencias">Preferencias</string>
    <string name="acercade">Acerca de...</string>

    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos:</string>
    <string name="apellido_1_apellido_2">Apellido_1 Apellido_2</string>
    <string name="correo_electr_nico">Correo Electrónico:</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="email_domain_com">email@domain.com</string>
    <string name="nombredospuntos">Nombre:</string>
    <string name="suscribe_a_un_nuevo_usuario_remoto">Suscribe a un nuevo usuario remoto</string>
    <string name="selecciona_un_usuario_remoto_a_neliminar">Elimina un usuario remoto</string>
    <string name="compartir">Compartir</string>
    <string name="perfil">Perfil</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- Acerca de -->
    <string name="textoAcercaDe"> Gracias por probar nuestra aplicacíon centrada en el mundo IoT, desarrollada por el grupo 2 durante el primer semestre de 2019 como proyecto final para la asignatura Proyecto IoT y App en la UPV de Gandía.</string>
    <string name="version"> Version: sprint final</string>
    <string name="email"> Email: mamoumar@epsg.upv.es</string>
    <string name="direccion"> Direccion: Carrer del Paranimf, 1, 46730 Grau i Platja, València</string>
    <!-- Acerca de -->

    <!-- Borrar user -->
    <string name="textview8">¿Está seguro de que quiere eliminar su cuenta?</string>
    <string name="noButton">No</string>
    <string name="siButton">Si</string>
    <!-- Borrar user -->

    <!-- casa -->
    <string name="estadoActual">Estado actual:</string>
    <string name="temperatura">Temperatura:</string>
    <string name="sensacionTermica">Sensación térmica:</string>
    <string name="humedad">Humedad:</string>
    <string name="puerta">Puerta:</string>
    <string name="estadoPuertaAbierto">Abierta</string>
    <string name="estadoPuertaCerrado">Cerrada</string>

    <string name="luces">Luces:</string>
    <!-- casa -->

    <!-- Crear perfil -->
    <string name="textoNombre">Nombre:</string>
    <string name="textoEmail">Email:</string>
    <string name="textoFecha">Fecha:</string>
    <string name="textoTelefono">Telefono:</string>
    <string name="textoTelefonoEmergencia">Telefono de emergencia:</string>
    <string name="sexo">Sexo:</string>
    <string name="mascalunino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="elegirButton">Elegir</string>
    <string name="guardarButton">Guardar</string>
    <!-- Crear perfil -->

    <!-- Fingerprint -->
    <string name="autentificación">Autentificación por huella dactilar</string>
    <string name="howToFinger">Ponga su dedo en el lector de huellas para verificar su identidad</string>
    <!-- Fingerprint -->

    <!-- Fragment tratamientos -->
    <string name="nombreMeds">Nombre:</string>
    <string name="cantidadMeds">Calidad:</string>
    <string name="Descripcion">Descripción:</string>
    <!-- Fragment tratamientos -->

    <!-- Perfil -->
    <string name="botonEditar">Editar</string>
    <string name="botonBorrarCuenta">Borrar cuenta</string>
    <!-- Perfil -->

    <!-- Preferencias -->

    <!-- Preferencias -->

    <!-- Tab primero -->
    <string name="altura">Altura:</string>
    <string name="peso">Peso:</string>
    <string name="datosRecientes">Sus datos mas recientes:</string>
    <string name="pesarme">Conéctame a la báscula</string>
    <string name="estadoObjetivo">Estado de su objetivo:</string>
    <!-- Tab primero -->

    <!-- nav drawer menu -->
    <string name="medicionesMenu">Mediciones</string>
    <string name="casaMenu">Casa</string>
    <string name="tratamientosMenu">Tratamientos</string>
    <string name="perfilMenu">Perfil</string>
    <string name="cerrarSesiónMenu">Cerrar sesión</string>
    <string name="mapaMenu">Mapa</string>
    <!-- nav drawer menu -->

    <!-- Main activity -->
    <string name="lucesEncendidas">Luces encendidas</string>
    <string name="lucesApagadas">Luces apagadas</string>
    <string name="permisoCaida">Sin el permiso, no se llamará a emergencias cuando se detecte una caída.</string>
    <string name="permisoMapa">Sin el permiso, no se mostrará el mapa con lugares de interes.</string>
    <string name="hastaP">Hasta pronto</string>
    <string name="haveAneatDay">Que tenga un buen día</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="bienvenidoCasa">Bienvenido a casa</string>
    <string name="solicitudPermisoLlamada">Without the phone permission the app won´t be able to call in case of an accidental fall.</string>
    <string name="mediciones">Mediciones</string>

    <!-- Main activity -->

    <!-- Hospital fragment -->
    <string name="solicitudPermisoMapa">Without the location permission the app won´t be able to show the map and it´s important landmarks.</string>
    <!-- Hospital fragment -->

    <!-- arrays -->
    <string name="Metros">Metros</string>
    <string name="Pies">Pies</string>
    <string name="Kg">Kg</string>
    <string name="Libras">Libras</string>
    <string name="Hospitales">Hospitales</string>
    <string name="Farmacias">Farmacias</string>
    <string name="permitir">Permitir</string>
    <string name="noPermitir">No permitir</string>
    <!-- arrays -->

    <!-- Preferencias xml -->
    <string name="umbralLlamadaT">Umbral para detectar la caida</string>
    <string name="umbralLlamadaS">Recomendamos valores entre 25 y 50</string>
    <string name="localizacionT">Localización a mostrar</string>
    <string name="localizacionS">Permite elegir entre distintos lugares de interes</string>
    <string name="llamadaEmergenciasT">Llamada a emergencias</string>
    <string name="llamadaEmergenciasS">Llamada automática a emergencias al detectar una caida, debe reiniciar la app al cambiar</string>
    <string name="alturaT">Unidades para la altura</string>
    <string name="alturaS">Unidad preferida para mostrar el peso</string>
    <string name="pesoT">Unidades para el peso</string>
    <string name="pesoS">Unidad preferida para mostrar la altura</string>
    <!-- Preferencias xml -->

    <!-- Tab fragment -->
    <string name="inicio">Inicio</string>
    <string name="datos">Datos</string>
    <!-- Tab fragment -->


    <string name="base"></string>

    <!--
    getResources().getString(R.string.)
    -->


    <!-- Para dialogos del filtro -->
    <string name="title_f">Fecha</string>
    <string name="elegir">Elige el ultimo día del que quieres visualizar los datos:</string>
    <!-- Para los botones de los dialogos -->
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombreee">Nombre:</string>
</resources>
