<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="preferencias_principal">

    <ListPreference
        android:key="peso"
        android:defaultValue="1"
        android:entries="@array/unidadesPeso"
        android:entryValues="@array/tiposUnidadesPeso"
        android:summary="@string/pesoS"
        android:title="@string/pesoT" />

    <ListPreference
        android:key="altura"
        android:defaultValue="1"
        android:entries="@array/unidadesAltura"
        android:entryValues="@array/tiposUnidadesAltura"
        android:summary="@string/alturaS"
        android:title="@string/alturaT" />

    <ListPreference
        android:key="llamadaEmergencia"
        android:defaultValue="1"
        android:entries="@array/llamadaSiNo"
        android:entryValues="@array/llamada12"
        android:summary="@string/llamadaEmergenciasS"
        android:title="@string/llamadaEmergenciasT" />

    <EditTextPreference
        android:defaultValue="25"
        android:inputType="number"
        android:key="umbralLlamada"
        android:summary="@string/umbralLlamadaS"
        android:title="@string/umbralLlamadaT" />

    <ListPreference
        android:key="localizacion"
        android:defaultValue="1"
        android:entries="@array/localizacionNombre"
        android:entryValues="@array/localizacion12"
        android:summary="@string/localizacionS"
        android:title="@string/localizacionT" />
</PreferenceScreen>