<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/ tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
         android:title="@string/preferencias"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="300"
         app:showAsAction="ifRoom"/>
    <item android:title="@string/acercade"
        android:id="@+id/acercaDe"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>
    <item android:title="@string/perfil"
        android:id="@+id/perfil"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_log_out"
        android:orderInCategory="400"
        android:title="Cerrar sesión"
        app:showAsAction="ifRoom" />
</menu>